--- a/days/cpp05/ex01/Makefile
+++ b/days/cpp05/ex01/Makefile
@@ -1,13 +1,35 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    script.sh                                          :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: azeraoul <azeraoul@student.42nice.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/11/16 14:28:26 by azeraoul          #+#    #+#              #
-#    Updated: 2021/11/16 14:28:26 by azeraoul         ###   ########.fr        #
+#    Created: 2021/11/09 13:22:35 by azeraoul          #+#    #+#              #
+#    Updated: 2021/11/13 11:58:47 by azeraoul         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME		:= Form
+CXX			:= clang++
+CXXFLAGS	:= -std=c++98 -Wall -Wextra -Werror
+FILES		:= $(addsuffix .cpp, main Form Bureaucrat)
+OBJS		:= $(FILES:.cpp=.o)
 
+.Phony: all re fclean clean
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $@
+
+%.o: %.c
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+clean:
+	$(RM) $(OBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean all
