--- a/days/cpp06/ex02/Makefile
+++ b/days/cpp06/ex02/Makefile
@@ -1,19 +1,36 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    script.sh                                          :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: azeraoul <azeraoul@student.42nice.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/11/06 21:26:07 by azeraoul          #+#    #+#              #
-#    Updated: 2021/11/16 14:28:39 by azeraoul         ###   ########.fr        #
+#    Created: 2021/11/23 14:36:34 by azeraoul          #+#    #+#              #
+#    Updated: 2021/11/23 14:36:34 by azeraoul         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-#!/bin/bash
+CXX		:= clang++
+CXXFLAGS	:= -Wall -Wextra -Werror
+NAME	:= Real
+FILES	:= $(addsuffix .cpp, main)
+OBJS	:= $(FILES:.cpp=.o)
+RM		:= rm -rf
 
-for item in *
-	do 
-		echo "add header to $item";
-		vim -c "Stdheader" $item -c "wq";
-done;
+.Phony: all re fclean clean
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) $< -o $@
+
+%.o:%.c
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+clean:
+	$(RM) $(OBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean all
